06/05/2024
- depend on liboauth2 >= 1.6.2
- release 3.5.0

06/02/2024
- don't include standard headers before NGINX headers; closes #2 ; thanks @anpin
  avoid compilation error with NGINX 1.26.0: field 'pkt6' has incomplete type

12/06/2023
- add support for the client credentials grant type
- depend on liboauth >= 1.6.0
- release 3.4.0

03/08/2023
- move repo to OpenIDC github organization

12/06/2022
- change Makefile install procedure
- depend on liboauth 1.4.5.2
- release 3.3.0

07/02/2021
- add option to not return an error on token missing/exchange failure

06/03/2021
- use ngx_pcalloc instead of ngx_pnalloc to align memory access

12/22/2020
- depend on liboauth2 1.4.0
- release 3.2.0

11/13/2020
- add STSCryptoPassphrase

11/10/2020
- use refactored liboauth2-sts

11/07/2020
- depend on liboauth2 >= 1.4.0
- bump to 3.2.0-dev
- liboauth2-sts: fix parsing of cache parameters (hardcoded leftover "max_key_size=8")

02/14/2020
- depend on liboauth 1.2.4 with named cache

02/05/2020
- depend on liboauth2 1.2.2 with new ROPC capability
- bump to 3.1.1

09/12/2019
- depend on liboauth2 1.2.0 with new request header API
- bump to 3.1.0

08/01/2019
- oops: fix swapped source token and user params
- version 3.0.3

07/17/2019
- update liboauth2-sts to include r->user in sts_handler (not used for NGINX right now)
- version 3.0.2

07/03/2019
- return status code from STS call: if > 500 (504 = gateway timeout)
- bump liboauth2 dependency to 1.1.1
- version 3.0.1